--- a/ng-girls-tutorial/angular.json
+++ b/ng-girls-tutorial/angular.json
@@ -7,7 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "inlineTemplate": true
         }
       },
       "root": "",
@@ -124,6 +125,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ng-girls-tutorial"
 }
